--- a/src/static/css/skeleton.css
+++ b/src/static/css/skeleton.css
@@ -1,21 +1,5 @@
-.button.button-primary,
-button.button-primary,
-input[type="submit"].button-primary,
-input[type="reset"].button-primary,
-input[type="button"].button-primary {
-  color: var(--text-color);
-  background-color: var(--primary-color);
-  border-color: var(--primary-color); }
-.button.button-primary:hover,
-button.button-primary:hover,
-input[type="submit"].button-primary:hover,
-input[type="reset"].button-primary:hover,
-input[type="button"].button-primary:hover,
-.button.button-primary:focus,
-button.button-primary:focus,
-input[type="submit"].button-primary:focus,
-input[type="reset"].button-primary:focus,
-input[type="button"].button-primary:focus {
-  color: var(--text-color);
-  background-color: var(--primary-color);
-  border-color: var(--primary-color); }
+.container {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  text-align: center;
+}
