--- a/src/templates/expense_form.html
+++ b/src/templates/expense_form.html
@@ -39,7 +39,7 @@
     <div class="twelve columns">
       <button 
         type="submit"
-        class="button button-primary u-half-width">
+        class="button button-edit u-full-width">
         Add Expense
       </button>
     </div>
