--- a/src/templates/expenses_info.html
+++ b/src/templates/expenses_info.html
@@ -19,7 +19,7 @@
   </div>
 </form>
 
-<button class="button button-primary" onclick="exportTableToCsv('Expenses')">Download as CSV</button>
+<button class="button button-edit u-full-width" onclick="exportTableToCsv('Expenses')">Download as CSV</button>
 
 <br>
 <br>
