--- a/src/static/css/stylesheet.css
+++ b/src/static/css/stylesheet.css
@@ -38,3 +38,22 @@
   background-color: var(--danger-dark-color);
   color: var(--text-light-color);
 }
+
+.errors {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  color: var(--danger-color);
+}
+
+.errors li {
+  background-color: #ffe6e6;
+  border: 1px solid #fcc;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+.errors li:before {
+  content: "\26A0"; /* warning symbol */
+  margin-right: 5px;
+}
