--- a/src/templates/expense_detail.html
+++ b/src/templates/expense_detail.html
@@ -1,10 +1,11 @@
 <tr id="expense-{{ expense.expense_id }}">
   <td>{{ expense.date }}</td>
   <td>{{ expense.category }}</td>
-  <td>{{ expense.price }}</th>
+  <td>{{ "{:0,.2f}".format(expense.price) }}</th>  
   <td>{{ expense.description }}</td>
   <td>
-    <button class="button button-edit u-half-width"
+    <button
+      class="button button-edit u-half-width"
       hx-target="#expense-{{ expense.expense_id }}"
       hx-swap="outerHTML swap:100ms"
       hx-get="/expenses/{{ expense.expense_id }}/edit">
