--- a/src/templates/expenses.html
+++ b/src/templates/expenses.html
@@ -6,12 +6,13 @@
     <tr>
       <th>Date</th>
       <th>Category</th>
-      <th>Price</th>
+      <th>Price / £</th>
       <th>Description</th>
       <th>Actions</th>
     </tr>
   </thead>
-  <tbody>
+  <!-- <tbody> -->
+  <tbody hx-target="closest tr" hx-swap="outerHTML">
     {% for expense in expenses %}
       {% include "expense_detail.html" %}
     {% endfor %}
