--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,7 +6,7 @@
     <img src="/static/img/logo.png" alt="w4lkies logo" style="max-width: 100px; height: auto;">
   </a>
   <h1>W4lkies App</h1>
-  <p>Management Dashboard</p>
+  <p>Welcome <b>{{ current_user.name }}!</b></p>
 </div>
 {% endblock header %}
 
@@ -14,6 +14,7 @@
 <div class="container">
   <ul>
     <li><a hx-get="/expenses/base" hx-target="#root" hx-swap="innerHTML" hx-push-url="/expenses" href="#" hx-trigger="click">Expenses</a></li>
+    <li><a href="/auth/sign-out">Sign Out</a></li>
   </ul>
 </div>
 {% endblock nav %}
