Added database service to wake database up before requests. Added HTMX and JS to handle logins when tokens expire.

--- a/src/templates/auth_form.html
+++ b/src/templates/auth_form.html
@@ -1,4 +1,6 @@
-<form id="auth-form" hx-target="#auth-form" hx-post="/auth/sign-in" hx-swap="outerHTML swap:100ms">
+<form id="auth-form"
+
+ hx-target="#auth-form" hx-post="/auth/sign-in" hx-swap="outerHTML swap:100ms">
   {{ auth_form.csrf_token }}
   {% with errors=auth_form.csrf_token.errors %}
     {% include "form_errors.html" %}
