Created expenses directory for expense templates.

--- a/src/templates/auth_form.html
+++ b/src/templates/auth_form.html
@@ -7,16 +7,14 @@
   {% endwith %}
   <input type="hidden" name="next" value="{{ request.args.get('next', '') }}"/>
   <div class="row">
-    <div class="twelve columns">
+    <div class="six columns">
       {{ auth_form.email.label() }}
       {{ auth_form.email(class_="u-full-width") }}
       {% with errors=auth_form.email.errors %}
         {% include "form_errors.html" %}
       {% endwith %}
     </div>
-  </div>
-  <div class="row">
-    <div class="twelve columns">
+    <div class="six columns">
       {{ auth_form.password.label() }}
       {{ auth_form.password(class_="u-full-width") }}
       {% with errors=auth_form.password.errors %}
@@ -24,9 +22,10 @@
       {% endwith %}
     </div>
   </div>
+  <br>
   <div class="row">
     <div class="twelve columns">
-      <button class="button-edit u-full-width" type="submit">Sign In</button>
+      <button class="button button-primary u-half-width" type="submit">Sign In</button>
     </div>
   </div>
 </form>
