--- a/src/templates/expenses/expense_form.html
+++ b/src/templates/expenses/expense_form.html
@@ -32,14 +32,12 @@
       {% endwith %}
     </div>
   </div>
-    <br>
-    <br>
-    <br>
+  <br>
   <div class="row">
     <div class="twelve columns">
       <button 
         type="submit"
-        class="button button-edit u-full-width">
+        class="button button-primary u-half-width">
         Add Expense
       </button>
     </div>
