--- a/src/templates/expenses/expenses_base.html
+++ b/src/templates/expenses/expenses_base.html
@@ -2,21 +2,21 @@
   <h1>Expenses</h1>
   <br>
   <div class="row">
-    <div class="six columns">
-      <button class="button button-primary u-full-width"
+    <div class="twelve columns">
+      <button class="button button-primary u-half-width"
         hx-get="/expenses/add"
         hx-target="#expenses-container"
         hx-swap="innerHTML">
         Add Expense
       </button>
-    </div>
-    <div class="six columns">
-      <button class="button button-primary u-full-width"
+      <button class="button button-primary u-half-width"
         hx-get="/expenses/info"
         hx-target="#expenses-container"
         hx-swap="innerHTML">>
         Expense Info
       </button>
+  <br>
+  <br>
   </div>
   <br>
   <br>
