--- a/src/static/css/stylesheet.css
+++ b/src/static/css/stylesheet.css
@@ -57,3 +57,17 @@
   content: "\26A0"; /* warning symbol */
   margin-right: 5px;
 }
+
+/* Loading spinner */
+.htmx-indicator{
+    opacity: 0;
+    transition: opacity 500ms ease-in;
+}
+
+.htmx-request .htmx-indicator{
+    opacity: 1;
+}
+
+.htmx-request.htmx-indicator{
+    opacity: 1;
+}
