--- a/src/templates/expenses/expense_form.html
+++ b/src/templates/expenses/expense_form.html
@@ -1,4 +1,4 @@
-<form id="expense-form" hx-post="/expenses/" hx-swap="outerHTML">
+<form id="expense-form" hx-post="/expenses/" hx-swap="outerHTML" hx-indicator="#spinner">
   {{ expense_form.csrf_token }}
   <div class="row">
     <div class="six columns">
@@ -35,11 +35,10 @@
   <br>
   <div class="row">
     <div class="twelve columns">
-      <button 
-        type="submit"
-        class="button button-primary u-half-width">
+      <button type="submit" class="button button-primary u-half-width">
         Add Expense
       </button>
+      <img id="spinner" class="htmx-indicator" src="/static/img/bars.svg"/>      
     </div>
   </div>
 </form>
