Added spinner to expense base toggle buttons.

--- a/src/templates/auth_form.html
+++ b/src/templates/auth_form.html
@@ -1,9 +1,8 @@
-<form id="auth-form" hx-target="#auth-form" hx-post="/auth/sign-in" hx-swap="outerHTML swap:10000ms" hx-trigger="submit" hx-indicator="#spinner">
+<form id="auth-form" hx-target="#auth-form" hx-post="/auth/sign-in" hx-swap="outerHTML swap:10000ms" hx-trigger="submit" hx-indicator="#auth-form-spinner">
   {{ auth_form.csrf_token }}
   {% with errors=auth_form.csrf_token.errors %}
     {% include "form_errors.html" %}
   {% endwith %}
-  <!-- <input type="hidden" name="next" value="{{ request.args.get('next', '') }}"/> -->
   <input type="hidden" name="next" value=""/>
   <div class="row">
     <div class="six columns">
@@ -24,8 +23,10 @@
   <br>
   <div class="row">
     <div class="twelve columns">
-      <button class="button button-primary u-half-width" type="submit">Sign In</button>
-      <img id="spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+      <button class="button button-primary u-half-width" type="submit">
+        Sign In
+        &nbsp;<img id="auth-form-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+      </button>
     </div>
   </div>
 </form>
