Added more spinners to expense buttons

--- a/src/templates/auth_form.html
+++ b/src/templates/auth_form.html
@@ -25,7 +25,7 @@
     <div class="twelve columns">
       <button class="button button-primary u-half-width" type="submit">
         Sign In
-        &nbsp;<img id="auth-form-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+        <img id="auth-form-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
       </button>
     </div>
   </div>
