--- a/src/templates/expenses/expense_form.html
+++ b/src/templates/expenses/expense_form.html
@@ -37,7 +37,7 @@
     <div class="twelve columns">
       <button type="submit" class="button button-primary u-half-width">
         Add Expense
-        &nbsp;<img id="expense-form-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+        <img id="expense-form-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
       </button>
     </div>
   </div>
