--- a/src/templates/expenses/expense_detail.html
+++ b/src/templates/expenses/expense_detail.html
@@ -9,9 +9,9 @@
       hx-target="#expense-{{ expense.expense_id }}"
       hx-swap="outerHTML swap:100ms"
       hx-get="/expenses/{{ expense.expense_id }}/edit"
-      hx-indicator="#expense-edit-spinner">
+      hx-indicator="#expense-{{ expense.expense_id}}-edit-spinner">
       Edit
-      <img id="expense-edit-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+      <img id="expense-{{ expense.expense_id}}-edit-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
     </button>
     <button
       class="button button-delete u-half-width"
@@ -20,9 +20,9 @@
       hx-delete="/expenses/{{ expense.expense_id }}"
       hx-confirm="Are you sure you wish to delete this expense?"
       hx-headers='{"X-CSRFToken": "{{ csrf_token() }}"}'
-      hx-indicator="#expense-delete-spinner">
+      hx-indicator="#expense-{{ expense.expense_id}}-delete-spinner">
       Delete
-      <img id="expense-delete-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
+      <img id="expense-{{ expense.expense_id}}-delete-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
     </button>
   </td>
 </tr>
