--- a/src/templates/expenses/expense_form.html
+++ b/src/templates/expenses/expense_form.html
@@ -1,3 +1,4 @@
+<h2>Add an Expense</h2>
 <form id="expense-form" hx-post="/expenses/" hx-swap="outerHTML" hx-indicator="#expense-form-spinner">
   {{ expense_form.csrf_token }}
   <div class="row">
