--- a/src/templates/expenses/expenses_base.html
+++ b/src/templates/expenses/expenses_base.html
@@ -21,8 +21,7 @@
         Expense Info
         <img id="expense-info-spinner" class="htmx-indicator" src="/static/img/bars.svg"/>
       </button>
-  <br>
-  <br>
+    </div>
   </div>
   <br>
   <br>
